# MCP_server_for_apis

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  fly.toml  prompt.md  pyproject.toml
.github/workflows/: ci.yml
config/: apis.yaml
docs/: MCP.md
docs/apis/: example.md  riksantikvaren_arcgis.md  riksantikvaren_ogc.md  snl.md  wikipedia.md
src/: __init__.py  main.py
src/agent/: __init__.py  runner.py  runner_v2.py
src/config/: __init__.py  loader.py
src/mcp/: __init__.py  errors.py  handlers.py  jsonrpc.py  models.py  registry.py  transport_sse.py
src/security/: __init__.py  auth.py  ssrf.py
src/tools/: __init__.py  base.py
src/tools/example/: __init__.py  client.py  tools.py
src/tools/riksantikvaren_arcgis/: __init__.py  client.py  tools.py
src/tools/riksantikvaren_ogc/: __init__.py  client.py  tools.py
src/tools/snl/: __init__.py  client.py  tools.py
src/tools/wikipedia/: __init__.py  client.py  tools.py
src/utils/: __init__.py  http.py  logging.py  rate_limit.py
tests/: __init__.py  agent_cli_test.py  conftest.py  test_health.py  test_mcp_jsonrpc.py  test_ssrf.py  test_tools_example.py
