[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kulturarv-mcp-server"
version = "1.0.0"
description = "MCP server for Norwegian cultural heritage APIs - OpenAI Agent Builder compatible"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Andreas Klæboe", email = "andreasklaeboe@gmail.com" }
]
keywords = ["mcp", "openai", "fastapi", "cultural-heritage", "norway"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "sse-starlette>=2.1.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.urls]
Homepage = "https://github.com/andreasklaeboe/kulturarv-mcp-server"
Documentation = "https://github.com/andreasklaeboe/kulturarv-mcp-server#readme"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

